--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,19 @@
+title: Hacked Jekyll
+description: Jekyll microtheme that looks like JSON
+baseurl: /hacked-jekyll
+url: https://piazzai.github.io
+
 theme: hacked-jekyll
-title: arsal
-description: "personal website"
+
+exclude:
+  - LICENSE
+  - README.md
+  - vendor/
+
+plugins:
+  - jekyll-seo-tag
+  - jekyll-sitemap
+
+sass:
+  sourcemap: never
+  
