--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Hacked Jekyll
-description: Jekyll microtheme that looks like JSON
-baseurl: /hacked-jekyll
-url: https://piazzai.github.io
+title: arsal portfolio
+description: personal website
+baseurl: /
+url: https://arslan38.github.io
 
 theme: hacked-jekyll
 
